--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="select_photo_from_gallery">Select photo from gallery</string>
     <string name="capture_photo">Capture photo from camera</string>
     <string name="registration_error">Email should not be blank and passwords must be equal</string>
+    <string name="rss">RSS</string>
 </resources>
